--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+**/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -48,7 +48,7 @@ typings/
 *.tsbuildinfo
 
 # Optional npm cache directory
-.npm
+**/.npm
 
 # Optional eslint cache
 .eslintcache
@@ -69,8 +69,8 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
-.env.test
+**/.env
+**/.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -79,8 +79,8 @@ typings/
 .next
 
 # Nuxt.js build / generate output
-.nuxt
-dist
+**/.nuxt
+**/dist
 
 # Gatsby files
 .cache/
